--- a/style.css
+++ b/style.css
@@ -8,6 +8,12 @@
   font-size: 25px;
 }
 
+body {
+  display: flex;
+  justify-content: center;
+  margin: 5%;
+}
+
 button {
   width: 27%;
   height: 19%;
