--- a/style.css
+++ b/style.css
@@ -16,19 +16,21 @@ body {
 
 button {
   width: 27%;
-  height: 19%;
+  height: 18%;
   margin: 0.5%;
   border-radius: 25%;
+  box-shadow: 2.5px 10px #a13d4e;
+  cursor: pointer;
 }
 
 .button--modifier {
-  width: 39%;
-  height: 39%;
+  width: 40%;
+  height: 18%;
 }
 
 .button--lg {
-  width: 42%;
-  height: 88%;
+  width: 80%;
+  height: 20%;
 }
 
 .grid-container {
@@ -40,7 +42,8 @@ button {
   border: 3px solid black;
   border-radius: 8%;
   background-color: lightcoral;
-  grid-template-areas: "top top top top top" "second second second third third" "second second second third third" "second second second forth forth" "second second second forth forth";
+  justify-content: center;
+  grid-template-areas: "top top top top top" "second second second third third" "second second second third third" "second second second third third" "second second second third third";
 }
 
 .top__flex {
@@ -58,26 +61,19 @@ button {
   grid-area: second;
   width: 100%;
   flex-wrap: wrap;
-  margin: 3%;
+  margin: 5% 0% 5% 3%;
 }
 
 .third__flex {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-evenly;
   grid-area: third;
   width: 100%;
   flex-wrap: wrap;
-  margin: 5% 5% 0 0;
-}
-
-.fourth__flex {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  grid-area: forth;
-  align-items: center;
-  margin: 0 4% 10% 5%;
+  margin: 5% 7% 5% 0;
+  padding-right: 8px;
+  padding-top: 6px;
 }
 
 p {
