--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
   display: flex;
   justify-content: center;
   margin: 5%;
+  background-image: linear-gradient(#0a3b47, #9ace67);
 }
 
 button {
@@ -19,8 +20,10 @@ button {
   height: 18%;
   margin: 0.5%;
   border-radius: 25%;
-  box-shadow: 2.5px 10px #a13d4e;
+  box-shadow: 2.5px 10px #6d6868;
   cursor: pointer;
+  background-color: black;
+  color: white;
 }
 
 .button--modifier {
@@ -31,6 +34,7 @@ button {
 .button--lg {
   width: 80%;
   height: 20%;
+  color: orange;
 }
 
 .grid-container {
@@ -39,10 +43,11 @@ button {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 2fr 1fr 1fr 1fr 1fr;
-  border: 3px solid black;
+  border: 4px solid black;
   border-radius: 8%;
-  background-color: lightcoral;
+  background-color: #b93fb9;
   justify-content: center;
+  box-shadow: 9.5px 15.5px #4e134e;
   grid-template-areas: "top top top top top" "second second second third third" "second second second third third" "second second second third third" "second second second third third";
 }
 
@@ -77,19 +82,24 @@ button {
 }
 
 p {
+  min-height: 83px;
+  font-family: cursive;
   border: 2px solid black;
   width: 90%;
   border-radius: 16%;
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
-  padding-bottom: 20px;
   padding-right: 20px;
-  font-size: larger;
-  background-color: #d8eff7;
+  font-size: 50px;
+  background-color: #f8d7f8;
 }
 
 #division {
   font-family: cursive;
   font-size: larger;
+}
+
+.orangeBtn {
+  color: orange;
 }
