--- a/style.css
+++ b/style.css
@@ -1,105 +1,119 @@
 @font-face {
-  font-family: "BoldlyMissy";
-  src: url("BoldlyMissy.otf") format("opentype");
+    font-family: "BoldlyMissy";
+    src: url("BoldlyMissy.otf") format("opentype");
 }
 * {
-  box-sizing: border-box;
-  font-family: "BoldlyMissy", cursive;
-  font-size: 25px;
+    box-sizing: border-box;
+    font-family: "BoldlyMissy", cursive;
+    font-size: 25px;
 }
 
 body {
-  display: flex;
-  justify-content: center;
-  margin: 5%;
-  background-image: linear-gradient(#0a3b47, #9ace67);
+    display: flex;
+    justify-content: center;
+    margin: 5%;
+    background-image: linear-gradient(#0a3b47, #9ace67);
 }
 
 button {
-  width: 27%;
-  height: 18%;
-  margin: 0.5%;
-  border-radius: 25%;
-  box-shadow: 2.5px 10px #6d6868;
-  cursor: pointer;
-  background-color: black;
-  color: white;
+    width: 27%;
+    height: 18%;
+    margin: 0.5%;
+    border-radius: 25%;
+    box-shadow: 2.5px 10px #6d6868;
+    cursor: pointer;
+    background-color: black;
+    color: white;
 }
 
 .button--modifier {
-  width: 40%;
-  height: 18%;
+    width: 40%;
+    height: 18%;
 }
 
 .button--lg {
-  width: 80%;
-  height: 20%;
-  color: orange;
+    width: 80%;
+    height: 20%;
+    color: orange;
 }
 
 .grid-container {
-  width: 35%;
-  min-height: 600px;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 2fr 1fr 1fr 1fr 1fr;
-  border: 4px solid black;
-  border-radius: 8%;
-  background-color: #b93fb9;
-  justify-content: center;
-  box-shadow: 9.5px 15.5px #4e134e;
-  grid-template-areas: "top top top top top" "second second second third third" "second second second third third" "second second second third third" "second second second third third";
+    width: 35%;
+    min-height: 600px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 2fr 1fr 1fr 1fr 1fr;
+    border: 4px solid black;
+    border-radius: 8%;
+    background-color: #b93fb9;
+    justify-content: center;
+    box-shadow: 9.5px 15.5px #4e134e;
+    grid-template-areas: "top top top top top" "second second second third third" "second second second third third" "second second second third third" "second second second third third";
 }
 
 .top__flex {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  grid-area: top;
-  margin: 3%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    grid-area: top;
+    margin: 3%;
 }
 
 .second__flex {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  grid-area: second;
-  width: 100%;
-  flex-wrap: wrap;
-  margin: 5% 0% 5% 3%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    grid-area: second;
+    width: 100%;
+    flex-wrap: wrap;
+    margin: 5% 0% 5% 3%;
 }
 
 .third__flex {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  grid-area: third;
-  width: 100%;
-  flex-wrap: wrap;
-  margin: 5% 7% 5% 0;
-  padding-right: 8px;
-  padding-top: 6px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    grid-area: third;
+    width: 100%;
+    flex-wrap: wrap;
+    margin: 5% 7% 5% 0;
+    padding-right: 8px;
+    padding-top: 6px;
 }
 
 p {
-  min-height: 83px;
-  font-family: cursive;
-  border: 2px solid black;
-  width: 90%;
-  border-radius: 16%;
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
-  padding-right: 20px;
-  font-size: 50px;
-  background-color: #f8d7f8;
+    min-height: 83px;
+    font-family: cursive;
+    border: 2px solid black;
+    width: 90%;
+    border-radius: 16%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    padding-right: 20px;
+    font-size: 50px;
+    background-color: #f8d7f8;
 }
 
 #division {
-  font-family: cursive;
-  font-size: larger;
+    font-family: cursive;
+    font-size: larger;
 }
 
 .orangeBtn {
-  color: orange;
+    color: orange;
+}
+
+@media only screen and (min-device-width: 460px) and (max-device-width: 1091px) {
+    .grid-container {
+        width: 70%;
+    }
+}
+@media only screen and (max-device-width: 460px) {
+    .grid-container {
+        width: 80%;
+    }
+    * {
+        font-size: medium;
+    }
 }
