error handling for decimal number usage

--- a/styles.scss
+++ b/styles.scss
@@ -102,6 +102,7 @@ p {
     // padding: 10px 20px 20px 0;
     font-size: 50px;
     background-color: rgb(248, 215, 248);
+    overflow: hidden;
 }
 
 #division {
